styles.css
body {
  background-color: hsl(233, 47%, 7%);
  color: hsl(0, 0%, 100%);
  font-family: 'Inter', sans-serif;
  box-sizing: border-box;
}

a {
  color: hsl(277, 64%, 61%);
}

.card {
  display: flex;
  background-color: hsl(244, 38%, 16%);
  font-size: 0.9375rem;
  width: 80%;
  margin: 20% auto;
  border-radius: 10px;
}

.card-left{
flex:1;
padding: 5% 5% 0 5%;
}

.card-left h1,h2,p {
  padding: 0;
  margin: 0;
}

.card-left h1 {
  font-size: 2.rem;
}

.card-left p {
  color: hsla(0, 0%, 100%, 0.75);
  padding: 2rem 0 1rem;
  width: 80%;
  line-height: 2rem;
}

.accent {
  color: hsl(277, 64%, 61%);
}

.stats {
  display: flex;
  margin: auto;
}

.stats .stats-left,.stats-mid,.stats-right {
  padding: 2rem 0 0 0;
  flex:1;
}

h2 {
  color: hsla(0, 0%, 100%, 0.6);
}

.stats p {
  margin: 0;
  padding: 0;
  font-family: 'Lexend Deca', sans-serif;
  font-weight: 400;
  text-transform: uppercase;
}

.card-right {
  flex:1;
}

.card-right img{
  display: block;
  width: 100%;
  height: 100%;
  border-top-right-radius: 10px;
border-bottom-right-radius: 10px;
}


/* Lexend Deca

font-family: 'Lexend Deca', sans-serif; */

